--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,13 @@
 		vertical-align: baseline;
 	}
 
+    .pads {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 0px;
+        padding-right: 25px;
+    }
+
 	.jif {
 		padding: 0px 0px;
 	}
