--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,14 @@
         padding-right: 25px;
     }
 
+	.rotateimg180 {
+  		-webkit-transform:rotate(180deg);
+  		-moz-transform: rotate(180deg);
+  		-ms-transform: rotate(180deg);
+  		-o-transform: rotate(180deg);
+  		transform: rotate(180deg);
+	}
+
 	.jif {
 		padding: 0px 0px;
 	}
