--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,22 @@
 		vertical-align: baseline;
 	}
 
+
+    .currpage {
+        border-radius: 10px;
+        background-color:rgb(255, 215, 51);
+        background-color: white;
+        cursor:pointer;
+    }
+
+    .othrpage {
+        border-radius: 10px;
+        color:white;
+        background-color:rgb(255, 215, 51);
+        cursor:pointer;
+    }
+
+
     .pads {
         padding-top: 10px;
         padding-bottom: 10px;
