--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,13 +17,13 @@
 button {
     border: none;
   border-radius: 3em;
-  box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.25);
   display: inline-block;
   font-size: 1.25em;
   padding: 1em 2em;
     width:auto;
     color: white;
-    background-color: gold;
+    background-color: rgba(255, 215, 0, 0.6);
 }
 
 .bar {
