--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -17,8 +17,9 @@
 /* Style the tab */
 div.tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    border-radius: 5px;
+    background-color: rgba(0, 102, 255, .3);
+    width: 100%;
 }
 
 /* Style the buttons inside the tab */
@@ -29,39 +30,22 @@ div.tab button {
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
+    font-size: 15px;
+    color: white;
     transition: 0.3s;
+    width: 20%;
 }
 
 /* Change background color of buttons on hover */
 div.tab button:hover {
-    background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-div.tab button.active {
-    background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
+    background-color: rgba(255, 255, 255, .75);
+    color: black;
 }
 
 
-button {
-    border: none;
-  border-radius: 3em;
-  box-shadow: 2px 2px 2px rgba(0,0,0,0.25);
-  display: inline-block;
-  font-size: 1.25em;
-  padding: 1em 2em;
-    width:auto;
-    color: white;
-    background-color: rgba(255, 215, 0, 0.6);
-}
+
+
+
 
 .bar {
     width: 100%
