--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,20 @@
 	}
 
 
+button {
+    width: 33%;
+    background-color: gold;
+    color: white;
+    font-size: 20px;
+    box-shadow: 5px solid red;
+    border-radius: 20px;
+}
+button:hover {
+    width: 40%;
+    background-color: white;
+    color: gold;
+}
+
 /* Style the tab */
 div.tab {
     overflow: hidden;
@@ -51,7 +65,7 @@ div.tab button.active {
 }
 
 
-button {
+.norm_but {
     border: none;
   border-radius: 3em;
   box-shadow: 2px 2px 2px rgba(0,0,0,0.25);
