--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,19 +13,52 @@
 		vertical-align: baseline;
 	}
 
+.button {
+    background-color: gold; /* Green */
+    border: none;
+    color: white;
+    width: 100%;
+    border-radius: 30px;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
 
-button {
-    width: 33%;
+.form {
+    background-color: gold; /* Green */
+    border: none;
+    color: white;
+    width: 100%;
+    border-radius: 30px;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid gold;
+}
+
+.button1:hover {
     background-color: gold;
     color: white;
-    font-size: 20px;
-    box-shadow: 5px solid red;
-    border-radius: 20px;
 }
-button:hover {
-    background-color: white;
-    color: gold;
-}
+
+
 
 /* Style the tab */
 div.tab {
